--- a/frontend/src/components/Products/Item/Item.module.scss
+++ b/frontend/src/components/Products/Item/Item.module.scss
@@ -69,6 +69,7 @@
             justify-content: space-around;
             align-items: flex-start;
             flex-wrap: wrap;
+            margin-bottom: 1.5rem;
 
             & .item {
                 flex: 0 0 calc(50% - 1rem);
