--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -25,7 +25,7 @@
         }
     }
 
-    & h2 {
+    & .title {
         font-size: 2rem;
         font-weight: 700;
 
@@ -34,7 +34,7 @@
         }
     }
 
-    & p {
+    & .subtitle {
         font-size: 1rem;
         font-weight: 500;
 
