--- a/frontend/src/components/Input/Input.module.scss
+++ b/frontend/src/components/Input/Input.module.scss
@@ -4,7 +4,7 @@
     min-width: 80%;
     max-width: 100%;
     padding: 1rem;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     color: #212121;
     border: none;
