--- a/frontend/src/components/Products/Products.module.scss
+++ b/frontend/src/components/Products/Products.module.scss
@@ -7,8 +7,12 @@
         gap: 2rem;
 
         & .item {
-            flex: 1 0 calc(100% / 3 - 2rem);
+            flex: 0 0 calc(100% / 3 - 2rem * 2 / 3);
             transition: all 0.3s ease-in-out;
+
+            @media screen and (max-width: 899px) {
+                flex: 1 0 100%;
+            }
 
             &:hover {
                 transform: scale(1.05);
